basic aesthetic and copy updates

--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product War: Market Intelligence for Teams</title>
-    <meta name="description" content="A collaborative platform that combines human insight with AI-powered research to keep your team's view of the market always sharp. Modern market intelligence for strategic teams." />
+    <title>Product War</title>
+    <meta
+      name="description"
+      content="A collaborative platform that combines human insight with AI-powered research to keep your team's view of the market always sharp. Modern market intelligence for strategic teams."
+    />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="33a8867f-0ba5-4f10-bc93-bebceae72b8d" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
